[package]
name = "nikke_calculator"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
yew = { version = "0.21", features = ["csr"] } # Enable client-side rendering
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["File", "FileReader", "Event", "HtmlInputElement"] }
yewdux = "0.8.0"


