[package]
name = "nikke_calculator"
version = "0.1.0"
edition = "2024"

[build]
public_url = "/nikke_calculator/"


[dependencies]
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
yew = { version = "0.21", features = ["csr"] } # Enable client-side rendering
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["File", "FileReader", "Event", "HtmlInputElement"] }


